--- a/requirements.production.txt
+++ b/requirements.production.txt
@@ -1,11 +1,42 @@
-# Production Dependencies
-Django==5.0.14
-django-environ==0.12.0
-django-widget-tweaks==1.5.0
-django-multiselectfield==0.1.13
-sqlparse==0.5.3
-whitenoise==6.9.0
-mysqlclient==2.2.7
-mssql-django==1.5
+# Core Django
+Django==4.2.7
+django-environ==0.11.2
+
+# Database
+mysqlclient==2.2.0
+django-mysql==4.12.0
+
+# Performance & Caching
+django-redis==5.4.0
+redis==5.0.1
+django-cacheops==8.0.0
+
+# Static Files & Media
+whitenoise==6.6.0
+Pillow==10.1.0
+
+# Production Server
 gunicorn==21.2.0
-psycopg2-binary==2.9.9
+uvicorn==0.24.0
+
+# Security
+django-cors-headers==4.3.1
+django-ratelimit==4.1.0
+
+# Monitoring & Logging
+django-debug-toolbar==4.2.0
+django-extensions==3.2.3
+
+# PDF Generation
+reportlab==4.0.7
+PyPDF2==3.0.1
+
+# Email & OAuth2
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.108.0
+
+# Utilities
+python-dateutil==2.8.2
+pytz==2023.3
